# carboost

./: .gitignore  CARBOOST_demo_no_colabfold_CD22target.ipynb  CARBOOST_toolkit_demo_with_colabfold_and_rMSA_AF2.ipynb  CARBOOST_toolkit_with_colabfold_and_rMSA_AF2.ipynb  LICENSE  README.md  env-mac.yml  pyproject.toml
carboost/: __init__.py
carboost/folding/: __init__.py  colabfold_utils.py  colabfold_wrapper.py
carboost/receptor/: __init__.py  filter.py  receptor_utils.py
carboost/resources/CD8alpha/af2rave/: max_hinge_values.pkl  probab_8H15.npy  probab_8H27.npy  probab_8H33.npy  probab_8H40.npy  probab_8H47.npy  probab_8H51.npy  probab_8H56.npy  probab_8H61.npy  probab_8H76.npy  probab_8H91.npy
carboost/resources/CD8alpha/rMSA_AF2/: ze2e_8H11_wt.npy  ze2e_8H13_wt.npy  ze2e_8H15_wt.npy  ze2e_8H17_wt.npy  ze2e_8H19_wt.npy  ze2e_8H21_mt.npy  ze2e_8H21_wt.npy  ze2e_8H23_mt.npy  ze2e_8H23_wt.npy  ze2e_8H25_mt.npy  ze2e_8H25_wt.npy  ze2e_8H27_mt.npy  ze2e_8H27_wt.npy  ze2e_8H29_mt.npy  ze2e_8H29_wt.npy  ze2e_8H31_mt.npy  ze2e_8H31_wt.npy  ze2e_8H33_mt.npy  ze2e_8H33_wt.npy  ze2e_8H35_mt.npy  ze2e_8H35_wt.npy  ze2e_8H37_mt.npy  ze2e_8H37_wt.npy  ze2e_8H39_mt.npy  ze2e_8H39_wt.npy  ze2e_8H3_wt.npy  ze2e_8H41_mt.npy  ze2e_8H41_wt.npy  ze2e_8H43_mt.npy  ze2e_8H43_wt.npy  ze2e_8H45_mt.npy  ze2e_8H45_wt.npy  ze2e_8H47_mt.npy  ze2e_8H47_wt.npy  ze2e_8H51_mt.npy  ze2e_8H51_wt.npy  ze2e_8H56_mt.npy  ze2e_8H56_wt.npy  ze2e_8H61_mt.npy  ze2e_8H61_wt.npy  (+3 more)
carboost/synapse/: __init__.py  synapse.py  synapse_utils.py
carboost/utils/: load_utils.py  plot_utils.py
